# toodles

./: .gitignore  README.md  SAP.cmd  comutils.py  pyproject.toml  test.py  test_epelsa_fibra.py  toodles.bat  toodles.py  toodles_fibra.bat
doc/: EPELSA.md  SAP.cmd  sap.rdp
